[tool.poetry]
name = "qa-guru-4-hw-18"
version = "0.1.0"
description = ""
authors = ["peresypkinmi <peresypkin.ma@sibvaleo.com>"]
readme = "README.md"
packages = [{include = "qa_guru_4_hw_18"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
requests = "^2.30.0"
voluptuous = "^0.13.1"
data = "^0.4"
pytest-voluptuous = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
